<resources>
    <string name="app_name">Best Buy Customer Recommendation Worksheet</string>
    <string name="action_settings">Settings</string>
    <string name="HomeTheaterTextView">Home Theater </string>
    <string name="CRWTextView">Customer Recommendation Worksheet</string>
    <string name="ContactMeTextView">Contact Me</string>
    <string name="CustomerInfoTextView">Customer Information</string>
    <string name="YouTextView">YOU</string>
    <string name="Question1TextView">Are you a My Best Buy member or a Best Buy Credit CardMember?</string>
    <string name="Question2TextView">Do you have a specific product in mind or have you seen anything you like?</string>
    <string name="EnterNameHint">Enter Name</string>
    <string name="Question3TextView">What is important to you?</string>
    <string name="Question3CheckBox2">Sound Quality</string>
    <string name="Question3CheckBox3">Size</string>
    <string name="Question3CheckBox4">Warranty</string>
    <string name="Question3CheckBox5">Inputs</string>
    <string name="Question3CheckBox6">Other</string>
    <string name="title_activity_main2">Technology Map</string>
    <string name="YTM_TextView3">How old is your router <i>(Years)</i> </string>
    <string name="YTM_TextView2">Current Internet Speed <i>(Mb/s)</i> </string>
    <string name="YTM_TextView4">Max Speed of current router <i>(Mb/s)</i></string>
    <string name="editText4_hint"><i>I recommend...</i> </string>
    <string name="CRW2_TextView">Use the space below to map out all of the devices that will be a part of your Home Theater Solution: <i><font fgcolor="#FF669900">
        (You can Drag and Drop items)</font></i></string>
    <string name="App_Info">Created by Joshua Paredes\nCISC 4900-V1B \nLast Updated 04/10/2016</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_calc">Calculators</string>
    <string name="title_activity_about_me">Thanks for Shopping at Best Buy</string>
    <string name="Survey_Text">First, we'd like to thank you for shopping with us. We recognize
        that you have many choices about where to spend your hard-earned money and we appreciate
        that you have given us an opportunity to earn your business. Second, we strive to create
        the best possible experience for you, and we appreciate your honest feedback about what we
        are doing well in our stores and where we need to make improvements. Listening to our
        customers is very important and you can be assured that your voice will be heard. If you made
        a purchase today you are shortly going to be receiving a Survey Email. If you could fill out
        that survey and write a comment about you're experience at Best Buy and a brief comment on
        the service you received from a particular sales person, we would greatly appreciate that
        feedback. Thank you advance for your time and input.</string>
</resources>
